@@ -1,3 +1,11 @@
+2007-04-05  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>
+
+	* flumotion/component/dvb/admin_gtk.py (DVBAdminGtkNode.haveWidgetTree,
+	  DVBAdminGtkNode.setUIState, DVBAdminGtkNode.lockSet, DVBAdminGtk):
+	* flumotion/component/dvb/dvb.glade:
+	Add lock value to admin.
+	Reduce padding of widgets.
+
 2007-04-03  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>
 
 	* flumotion/component/dvb/admin_gtk.py (DVBAdminGtkNode.haveWidgetTree,
